--- a/layouts/_partials/modal_search.html
+++ b/layouts/_partials/modal_search.html
@@ -38,9 +38,6 @@
                 <li><input hidden="" type="radio" name="type2" id="m_type-google1"
                            value="https://www.google.co.uk/search?q=" data-placeholder="Google search"><label
                         for="m_type-google1"><span class="text-muted">Google</span></label></li>
-                <li><input hidden="" type="radio" name="type2" id="m_type-bing1"
-                           value="https://www.bing.com/search?q=" data-placeholder="Mircosoft bing search"><label
-                        for="m_type-bing1"><span class="text-muted">Bing</span></label></li>
 
                 <li><input hidden="" type="radio" name="type2" id="m_type-baidu1"
                            value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道"><label
@@ -84,23 +81,23 @@
             <div class="search-group group-f"><span class="type-text text-muted">job</span>
               <ul class="search-type">
                 <li><input hidden="" type="radio" name="type2" id="m_type-zhaopin"
-                           value="https://sou.zhaopin.com/jobs/searchresult.ashx?kw=" data-placeholder="智联招聘">
-                  <label for="m_type-zhaopin"><span class="text-muted">智联招聘</span></label></li>
+                           value="https://uk.indeed.com/jobs?q=" data-placeholder="Indeed UK">
+                  <label for="m_type-zhaopin"><span class="text-muted">Indeed UK</span></label></li>
                 <li><input hidden="" type="radio" name="type2" id="m_type-51job"
-                           value="https://search.51job.com/?" data-placeholder="前程无忧">
-                  <label for="m_type-51job"><span class="text-muted">前程无忧</span></label></li>
+                           value="https://www.reed.co.uk/jobs?keywords=" data-placeholder="Reed.co.uk">
+                  <label for="m_type-51job"><span class="text-muted">Reed.co.uk</span></label></li>
                 <li><input hidden="" type="radio" name="type2" id="m_type-lagou"
-                           value="https://www.lagou.com/jobs/list_" data-placeholder="拉钩网">
-                  <label for="m_type-lagou"><span class="text-muted">拉钩网</span></label></li>
+                           value="https://www.totaljobs.com/jobs?Keywords=" data-placeholder="Totaljobs">
+                  <label for="m_type-lagou"><span class="text-muted">Totaljobs</span></label></li>
                 <li><input hidden="" type="radio" name="type2" id="m_type-liepin"
-                           value="https://www.liepin.com/zhaopin/?key=" data-placeholder="猎聘网">
-                  <label for="m_type-liepin"><span class="text-muted">猎聘网</span></label></li>
+                           value="https://www.cv-library.co.uk/jobs?keywords=" data-placeholder="CV-Library">
+                  <label for="m_type-liepin"><span class="text-muted">CV-Library</span></label></li>
               </ul>
             </div>
           </div>
           <form action="https://nav.iowen.cn?s=" method="get" target="_blank" class="super-search-fm">
             <input type="text" id="m_search-text" class="form-control smart-tips search-key" zhannei=""
-                   autocomplete="off" placeholder="输入关键字搜索" style="outline:0">
+                   autocomplete="off" placeholder="search" style="outline:0">
             <button type="submit"><i class="iconfont icon-search"></i></button>
           </form>
           <div class="card search-smart-tips" style="display: none">
