--- a/themes/WebStack-Hugo/layouts/partials/sidebar.html
+++ b/themes/WebStack-Hugo/layouts/partials/sidebar.html
@@ -121,18 +121,11 @@
                 <div class="border-top py-2 border-color">
                     <div class="flex-bottom">
                         <ul>
-                            <li id="menu-item-237"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-237 sidebar-item">
-                                <a href="{{ $.Site.Params.upload }}" target="_blank">
-                                    <i class="fas fa-file-upload icon-fw icon-lg mr-2"></i>
-                                    <span>网站提交</span></a>
-                            </li>
-
 			    <li id="menu-item-212"
                                  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-212 sidebar-item">
-                                 <a href="#friendlink" class="smooth">
+                                 <a href="#friendlink" class="smooth" rel="noopener dofollow">
                                      <i class="fab fa-staylinked icon-fw icon-lg mr-2"></i>
-                                     <span>友情链接</span>
+                                     <span>friendly links</span>
                                  </a>
                             </li>
 
@@ -140,7 +133,7 @@
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-213 sidebar-item">
                                 <a target="_blank" rel="noopener" href="{{ $.Site.Params.about }}">
                                     <i class="fa fa-info-circle icon-fw icon-lg mr-2"></i>
-                                    <span>关于导航</span></a>
+                                    <span>about</span></a>
                             </li>
                         </ul>
                     </div>
