--- a/themes/WebStack-Hugo/layouts/404.html
+++ b/themes/WebStack-Hugo/layouts/404.html
@@ -1,1 +1,24 @@
-<p>找不到页面</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+<h1>404 Not Found</h1>
+<p>The requested resource could not be found on this server.</p>
+</body>
+</html>
